sgf/3.0/headers/Gamecore/compiler/bisflex/defparser.output
Terminals unused in grammar

   UMINUS


State 20 conflicts: 1 shift/reduce
State 84 conflicts: 1 shift/reduce
State 87 conflicts: 1 shift/reduce
State 89 conflicts: 1 shift/reduce
State 92 conflicts: 1 shift/reduce
State 93 conflicts: 1 shift/reduce


Grammar

    0 $accept: lines "end of file"

    1 $@1: /* empty */

    2 lines: $@1 ends
    3      | lines
    4      | section
    5      | error

    6 ends: end_or_comment
    7     | ends end_or_comment

    8 end_or_comment: "end of line"
    9               | COMMENT

   10 line: unquoted_text
   11     | DEF_BLANK
   12     | bg
   13     | bgctrl
   14     | data_list
   15     | data
   16     | selectbg
   17     | selectbgctrl
   18     | maybe_flip
   19     | DEF_LOOPSTART

   20 assignment: lhs '='
   21           | lhs '=' rhs
   22           | line

   23 lhs: variable
   24    | variable '(' value ')'

   25 rhs: expression_list

   26 expression_list: expression maybe_comma
   27                | expression_list ',' expression

   28 maybe_comma: ','
   29            | /* empty */

   30 expression: variable_rhs '=' value
   31           | expression1

   32 expression1: '(' expression ')'
   33            | '!' value
   34            | multiple_str_values
   35            | multiple_num_values
   36            | multiple_num_comma_values
   37            | data_list
   38            | string_value

   39 multiple_str_values: NUMBER IDENTIFIER
   40                    | string_value string_value
   41                    | multiple_str_values string_value

   42 multiple_num_comma_values: value ',' value
   43                          | multiple_num_comma_values ',' value

   44 multiple_num_values: value
   45                    | value multiple_num_values

   46 value: NUMBER

   47 string_value: data
   48             | variable_rhs '(' expression_list ')'
   49             | variable_rhs

   50 variable: identificator_lhs_list
   51         | DEF_FILENAME
   52         | DEF_FILENAME_2
   53         | variable '.' IDENTIFIER
   54         | variable '.' DEF_FILENAME
   55         | variable '.' DEF_FILENAME_2
   56         | variable '.' NUMBER

   57 identificator_lhs_list: IDENTIFIER
   58                       | DEF_COLOR_ADDITION
   59                       | DEF_COLOR_SUBTRACT
   60                       | DEF_HORIZONTAL
   61                       | DEF_VERTICAL
   62                       | identificator_lhs_list NUMBER
   63                       | identificator_lhs_list IDENTIFIER

   64 variable_rhs: data '.' IDENTIFIER
   65             | data '.' NUMBER
   66             | variable_rhs '.' IDENTIFIER
   67             | variable_rhs '.' NUMBER

   68 identificator_list: DEF_SELECTBG IDENTIFIER
   69                   | DEF_SELECTBGCTRL IDENTIFIER
   70                   | IDENTIFIER IDENTIFIER
   71                   | identificator_list IDENTIFIER
   72                   | identificator_list NUMBER

   73 data_list: data ',' data
   74          | data_list ',' data

   75 data: DEF_FILENAME
   76     | DEF_FILENAME_2
   77     | QUOTESTRING
   78     | IDENTIFIER pontuation
   79     | DATE
   80     | IDENTIFIER

   81 pontuation: '!'
   82           | '?'
   83           | pontuation '!'
   84           | pontuation '?'

   85 unquoted_text: DEF_TEXT

   86 section: '[' IDENTIFIER ']'
   87        | '[' IDENTIFIER NUMBER ']'
   88        | '[' identificator_list ',' IDENTIFIER ']'
   89        | '[' identificator_list ',' NUMBER ']'
   90        | '[' NUMBER ']'
   91        | '[' NUMBER NUMBER ']'
   92        | '[' NUMBER NUMBER NUMBER ']'
   93        | '[' identificator_list ']'
   94        | '[' DEF_SELECTBG NUMBER ']'
   95        | '[' DEF_SELECTBG NUMBER '.' IDENTIFIER ']'
   96        | '[' DEF_SELECTBG NUMBER '.' DEF_COLOR_ADDITION ']'
   97        | '[' DEF_SELECTBG NUMBER '.' DEF_COLOR_SUBTRACT ']'
   98        | '[' DEF_SELECTBGCTRL NUMBER ']'
   99        | '[' DEF_SELECTBGCTRL NUMBER '.' IDENTIFIER ']'
  100        | assignment
  101        | /* empty */

  102 maybe_flip: multiple_num_comma_values
  103           | multiple_num_comma_values ',' flip
  104           | multiple_num_comma_values ',' flip ',' color_sub
  105           | multiple_num_comma_values ',' ',' color_sub

  106 flip: DEF_HORIZONTAL
  107     | IDENTIFIER
  108     | DEF_VERTICAL
  109     | DEF_VERTICAL_HORIZONTAL

  110 color_sub: DEF_COLOR_ADDITION
  111          | IDENTIFIER
  112          | DEF_COLOR_SUBTRACT
  113          | DEF_ALPHA_BLEND
  114          | DEF_ALPHA_BLEND_SHORTHAND

  115 bg: DEF_BG

  116 selectbg: DEF_SELECTBG

  117 bgctrl: DEF_BGCTRL

  118 selectbgctrl: DEF_SELECTBGCTRL


Terminals, with rules where they appear

"end of file" (0) 0
'!' (33) 33 81 83
'(' (40) 24 32 48
')' (41) 24 32 48
',' (44) 27 28 42 43 73 74 88 89 103 104 105
'.' (46) 53 54 55 56 64 65 66 67 95 96 97 99
'=' (61) 20 21 30
'?' (63) 82 84
'[' (91) 86 87 88 89 90 91 92 93 94 95 96 97 98 99
']' (93) 86 87 88 89 90 91 92 93 94 95 96 97 98 99
error (256) 5
UMINUS (258)
"end of line" (259) 8
QUOTESTRING (260) 77
NUMBER (261) 39 46 56 62 65 67 72 87 89 90 91 92 94 95 96 97 98 99
IDENTIFIER (262) 39 53 57 63 64 66 68 69 70 71 78 80 86 87 88 95 99
    107 111
DEF_TEXT (263) 85
DEF_BLANK (264) 11
DEF_LOOPSTART (265) 19
DEF_VERTICAL_HORIZONTAL (266) 109
DEF_ALPHA_BLEND (267) 113
DEF_ALPHA_BLEND_SHORTHAND (268) 114
DEF_COLOR_ADDITION (269) 58 96 110
DEF_COLOR_SUBTRACT (270) 59 97 112
DEF_HORIZONTAL (271) 60 106
DEF_VERTICAL (272) 61 108
DEF_BG (273) 115
DEF_BGCTRL (274) 117
DEF_SELECTBG (275) 68 94 95 96 97 116
DEF_SELECTBGCTRL (276) 69 98 99 118
DEF_FILENAME (277) 51 54 75
DEF_FILENAME_2 (278) 52 55 76
DATE (279) 79
COMMENT (280) 9


Nonterminals, with rules where they appear

$accept (35)
    on left: 0
lines (36)
    on left: 2 3 4 5, on right: 0 3
$@1 (37)
    on left: 1, on right: 2
ends (38)
    on left: 6 7, on right: 2 7
end_or_comment (39)
    on left: 8 9, on right: 6 7
line (40)
    on left: 10 11 12 13 14 15 16 17 18 19, on right: 22
assignment (41)
    on left: 20 21 22, on right: 100
lhs (42)
    on left: 23 24, on right: 20 21
rhs (43)
    on left: 25, on right: 21
expression_list (44)
    on left: 26 27, on right: 25 27 48
maybe_comma (45)
    on left: 28 29, on right: 26
expression (46)
    on left: 30 31, on right: 26 27 32
expression1 (47)
    on left: 32 33 34 35 36 37 38, on right: 31
multiple_str_values (48)
    on left: 39 40 41, on right: 34 41
multiple_num_comma_values (49)
    on left: 42 43, on right: 36 43 102 103 104 105
multiple_num_values (50)
    on left: 44 45, on right: 35 45
value (51)
    on left: 46, on right: 24 30 33 42 43 44 45
string_value (52)
    on left: 47 48 49, on right: 38 40 41
variable (53)
    on left: 50 51 52 53 54 55 56, on right: 23 24 53 54 55 56
identificator_lhs_list (54)
    on left: 57 58 59 60 61 62 63, on right: 50 62 63
variable_rhs (55)
    on left: 64 65 66 67, on right: 30 48 49 66 67
identificator_list (56)
    on left: 68 69 70 71 72, on right: 71 72 88 89 93
data_list (57)
    on left: 73 74, on right: 14 37 74
data (58)
    on left: 75 76 77 78 79 80, on right: 15 47 64 65 73 74
pontuation (59)
    on left: 81 82 83 84, on right: 78 83 84
unquoted_text (60)
    on left: 85, on right: 10
section (61)
    on left: 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101, on right:
    4
maybe_flip (62)
    on left: 102 103 104 105, on right: 18
flip (63)
    on left: 106 107 108 109, on right: 103 104
color_sub (64)
    on left: 110 111 112 113 114, on right: 104 105
bg (65)
    on left: 115, on right: 12
selectbg (66)
    on left: 116, on right: 16
bgctrl (67)
    on left: 117, on right: 13
selectbgctrl (68)
    on left: 118, on right: 17


state 0

    0 $accept: . lines "end of file"

    error               shift, and go to state 1
    QUOTESTRING         shift, and go to state 2
    NUMBER              shift, and go to state 3
    IDENTIFIER          shift, and go to state 4
    '['                 shift, and go to state 5
    DEF_TEXT            shift, and go to state 6
    DEF_BLANK           shift, and go to state 7
    DEF_LOOPSTART       shift, and go to state 8
    DEF_COLOR_ADDITION  shift, and go to state 9
    DEF_COLOR_SUBTRACT  shift, and go to state 10
    DEF_HORIZONTAL      shift, and go to state 11
    DEF_VERTICAL        shift, and go to state 12
    DEF_BG              shift, and go to state 13
    DEF_BGCTRL          shift, and go to state 14
    DEF_SELECTBG        shift, and go to state 15
    DEF_SELECTBGCTRL    shift, and go to state 16
    DEF_FILENAME        shift, and go to state 17
    DEF_FILENAME_2      shift, and go to state 18
    DATE                shift, and go to state 19

    "end of file"  reduce using rule 101 (section)
    "end of line"  reduce using rule 1 ($@1)
    COMMENT        reduce using rule 1 ($@1)

    lines                      go to state 20
    $@1                        go to state 21
    line                       go to state 22
    assignment                 go to state 23
    lhs                        go to state 24
    multiple_num_comma_values  go to state 25
    value                      go to state 26
    variable                   go to state 27
    identificator_lhs_list     go to state 28
    data_list                  go to state 29
    data                       go to state 30
    unquoted_text              go to state 31
    section                    go to state 32
    maybe_flip                 go to state 33
    bg                         go to state 34
    selectbg                   go to state 35
    bgctrl                     go to state 36
    selectbgctrl               go to state 37


state 1

    5 lines: error .

    $default  reduce using rule 5 (lines)


state 2

   77 data: QUOTESTRING .

    $default  reduce using rule 77 (data)


state 3

   46 value: NUMBER .

    $default  reduce using rule 46 (value)


state 4

   57 identificator_lhs_list: IDENTIFIER .
   78 data: IDENTIFIER . pontuation
   80     | IDENTIFIER .

    '!'  shift, and go to state 38
    '?'  shift, and go to state 39

    "end of file"  reduce using rule 80 (data)
    ','            reduce using rule 80 (data)
    $default       reduce using rule 57 (identificator_lhs_list)

    pontuation  go to state 40


state 5

   86 section: '[' . IDENTIFIER ']'
   87        | '[' . IDENTIFIER NUMBER ']'
   88        | '[' . identificator_list ',' IDENTIFIER ']'
   89        | '[' . identificator_list ',' NUMBER ']'
   90        | '[' . NUMBER ']'
   91        | '[' . NUMBER NUMBER ']'
   92        | '[' . NUMBER NUMBER NUMBER ']'
   93        | '[' . identificator_list ']'
   94        | '[' . DEF_SELECTBG NUMBER ']'
   95        | '[' . DEF_SELECTBG NUMBER '.' IDENTIFIER ']'
   96        | '[' . DEF_SELECTBG NUMBER '.' DEF_COLOR_ADDITION ']'
   97        | '[' . DEF_SELECTBG NUMBER '.' DEF_COLOR_SUBTRACT ']'
   98        | '[' . DEF_SELECTBGCTRL NUMBER ']'
   99        | '[' . DEF_SELECTBGCTRL NUMBER '.' IDENTIFIER ']'

    NUMBER            shift, and go to state 41
    IDENTIFIER        shift, and go to state 42
    DEF_SELECTBG      shift, and go to state 43
    DEF_SELECTBGCTRL  shift, and go to state 44

    identificator_list  go to state 45


state 6

   85 unquoted_text: DEF_TEXT .

    $default  reduce using rule 85 (unquoted_text)


state 7

   11 line: DEF_BLANK .

    $default  reduce using rule 11 (line)


state 8

   19 line: DEF_LOOPSTART .

    $default  reduce using rule 19 (line)


state 9

   58 identificator_lhs_list: DEF_COLOR_ADDITION .

    $default  reduce using rule 58 (identificator_lhs_list)


state 10

   59 identificator_lhs_list: DEF_COLOR_SUBTRACT .

    $default  reduce using rule 59 (identificator_lhs_list)


state 11

   60 identificator_lhs_list: DEF_HORIZONTAL .

    $default  reduce using rule 60 (identificator_lhs_list)


state 12

   61 identificator_lhs_list: DEF_VERTICAL .

    $default  reduce using rule 61 (identificator_lhs_list)


state 13

  115 bg: DEF_BG .

    $default  reduce using rule 115 (bg)


state 14

  117 bgctrl: DEF_BGCTRL .

    $default  reduce using rule 117 (bgctrl)


state 15

  116 selectbg: DEF_SELECTBG .

    $default  reduce using rule 116 (selectbg)


state 16

  118 selectbgctrl: DEF_SELECTBGCTRL .

    $default  reduce using rule 118 (selectbgctrl)


state 17

   51 variable: DEF_FILENAME .
   75 data: DEF_FILENAME .

    "end of file"  reduce using rule 75 (data)
    ','            reduce using rule 75 (data)
    $default       reduce using rule 51 (variable)


state 18

   52 variable: DEF_FILENAME_2 .
   76 data: DEF_FILENAME_2 .

    "end of file"  reduce using rule 76 (data)
    ','            reduce using rule 76 (data)
    $default       reduce using rule 52 (variable)


state 19

   79 data: DATE .

    $default  reduce using rule 79 (data)


state 20

    0 $accept: lines . "end of file"
    3 lines: lines .

    "end of file"  shift, and go to state 46

    "end of file"  [reduce using rule 3 (lines)]


state 21

    2 lines: $@1 . ends

    "end of line"  shift, and go to state 47
    COMMENT        shift, and go to state 48

    ends            go to state 49
    end_or_comment  go to state 50


state 22

   22 assignment: line .

    $default  reduce using rule 22 (assignment)


state 23

  100 section: assignment .

    $default  reduce using rule 100 (section)


state 24

   20 assignment: lhs . '='
   21           | lhs . '=' rhs

    '='  shift, and go to state 51


state 25

   43 multiple_num_comma_values: multiple_num_comma_values . ',' value
  102 maybe_flip: multiple_num_comma_values .
  103           | multiple_num_comma_values . ',' flip
  104           | multiple_num_comma_values . ',' flip ',' color_sub
  105           | multiple_num_comma_values . ',' ',' color_sub

    ','  shift, and go to state 52

    $default  reduce using rule 102 (maybe_flip)


state 26

   42 multiple_num_comma_values: value . ',' value

    ','  shift, and go to state 53


state 27

   23 lhs: variable .
   24    | variable . '(' value ')'
   53 variable: variable . '.' IDENTIFIER
   54         | variable . '.' DEF_FILENAME
   55         | variable . '.' DEF_FILENAME_2
   56         | variable . '.' NUMBER

    '('  shift, and go to state 54
    '.'  shift, and go to state 55

    $default  reduce using rule 23 (lhs)


state 28

   50 variable: identificator_lhs_list .
   62 identificator_lhs_list: identificator_lhs_list . NUMBER
   63                       | identificator_lhs_list . IDENTIFIER

    NUMBER      shift, and go to state 56
    IDENTIFIER  shift, and go to state 57

    $default  reduce using rule 50 (variable)


state 29

   14 line: data_list .
   74 data_list: data_list . ',' data

    ','  shift, and go to state 58

    $default  reduce using rule 14 (line)


state 30

   15 line: data .
   73 data_list: data . ',' data

    ','  shift, and go to state 59

    $default  reduce using rule 15 (line)


state 31

   10 line: unquoted_text .

    $default  reduce using rule 10 (line)


state 32

    4 lines: section .

    $default  reduce using rule 4 (lines)


state 33

   18 line: maybe_flip .

    $default  reduce using rule 18 (line)


state 34

   12 line: bg .

    $default  reduce using rule 12 (line)


state 35

   16 line: selectbg .

    $default  reduce using rule 16 (line)


state 36

   13 line: bgctrl .

    $default  reduce using rule 13 (line)


state 37

   17 line: selectbgctrl .

    $default  reduce using rule 17 (line)


state 38

   81 pontuation: '!' .

    $default  reduce using rule 81 (pontuation)


state 39

   82 pontuation: '?' .

    $default  reduce using rule 82 (pontuation)


state 40
